<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:context=".DetailActivity">

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/cB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:tag="0"
        android:onClick="onCheckboxClicked"
        android:text="Lu" />

    <ImageView
        android:id="@+id/cover"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ps5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"/>

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_place_holder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:lines="2"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/author"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author_placeholder"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        android:lines="1" />

    <TextView
        android:id="@+id/description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/author_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp" />


  </LinearLayout>
</ScrollView>